--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -38,7 +38,8 @@
 	top: 50%;
 	left: 50%;
 	margin: (-$side / 2) 0 0 (-$side / 2);
-	transition: 3s;
+	transition: top 3s, left 3s, margin 3s visibility 10s;
+	transition-timing-function: linear;
 }
 
 .circle-left-top {
