--- a/src/index.pug
+++ b/src/index.pug
@@ -10,7 +10,10 @@ html(lang="en")
 		link(rel="stylesheet" type="text/css" href="css/main.css")
 	body
 		.row
-			.col.l12.m12.s12.main-cont
-				#my-circle.circle-center
-
+			.col-sm-4.colx
+				| One of three columns
+			.col-sm-4.colx
+				| One of three columns
+			.col-sm-4.colx
+				| One of three columns
 		script(src="js/main.js")
