Add top-bot, left-right animation

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,9 +12,6 @@ html(lang="en")
 		.container-fluid
 			.row
 				.col-sm-12.main-cont
-					//- Пустой блок ("direct-anim") нужен для прямых анимаций (верх-них, лево-право, диагонали, квадрат)
-					#direct-anim
-					//- Для включения анимаций вращения - подключить блок "main-orbit" с вложенным "orbit-circle"
-					#spin-anim-main.cont-1
-						#spin-anim.main-circle-1
+					#anim-main.cont-linear.circle-left-right
+						#anim-circle.main-circle
 		script(src="js/main.js")
