Modal structure & square animation

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,6 +12,6 @@ html(lang="en")
 		.container-fluid
 			.row
 				.col-sm-12.main-cont
-					#anim-main.cont-linear.circle-left-right
+					#anim-main.cont-linear.circle-square-clockwise
 						#anim-circle.main-circle
 		script(src="js/main.js")
