Add helper animation, orbit animation

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,6 +12,7 @@ html(lang="en")
 		.container-fluid
 			.row
 				.col-sm-12.main-cont
-					#anim-main.cont-linear.circle-square-clockwise
-						#anim-circle.main-circle
+					#anim-main.linear-cont.circle-orbit-counterclock-wise
+						#anim-circle.orbit-circle
 		script(src="js/main.js")
+
