--- a/src/style/partials/_containers.scss
+++ b/src/style/partials/_containers.scss
@@ -7,10 +7,19 @@
 	// Включение аппаратного ускорения (наверное)
 	transform: translateZ(0);
 	overflow: hidden;
-
 }
 
-// Окружность; анимирована; выровнена по центру вьюпорта
+// Контейнер (100% вьюпорта) для окружности
+.linear-cont {
+	background-color: #FFE0B2;
+	height: 100vh;
+	width: 100vw;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+}
+
+// Окружность; выровнена по центру вьюпорта
 .main-circle {
 	background-color: #E57373;
 	border-radius: 50%;
@@ -22,68 +31,9 @@
 	transform: translate(-50%, -50%);
 }
 
-// Блок (100% вьюпорта) для окружности, выровненной по центру вьюпорта; прямые анимации
-.cont-linear {
-	background-color: #FFE0B2;
-	height: 100vh;
-	width: 100vw;
-	position: absolute;
-	top: 0%;
-	left: 0%;
-}
-
-// Блок (100% вьюпорта) для окружности, выровненной по верхнему краю вьюпорта; круговые анимации
-.cont-orbit {
-	background-color: #fff;
-	height: 100vh;
-	width: $diameter;
-	margin: 0 auto;
-	// Окружность, для анимации врацения по кругу
-	.orbit-circle {
-		@extend .main-circle;
-		top: calc(0% + #{$diameter / 2});
+// Окружность; выравнивается по верхнему краю вьюпорта
+.orbit-circle {
+	@extend .main-circle;
+	// Анимация для перемещения окружности вверх перед началом круговой анимации и вниз - после завершения
+	animation: clockwise-orbit-help 3s linear 1s normal forwards running, clockwise-orbit-help 3s linear 16s reverse forwards running;
 	}
-}
-
-// Блок для запуска анимации мигания окружности
-.circle-blinking {
-	animation: blinking 1s infinite alternate ease-in-out;
-}
-
-// Блок для запуска анимации движения окружности (верх-низ)
-.circle-top-bot {
-	// animation: top-bot 5s linear 3s 5 normal none running;
-	animation-name: top-bot;
-	animation-duration: 5s;
-	animation-timing-function: linear;
-	animation-delay: 3s;
-	animation-iteration-count: 5;
-	animation-direction: normal;
-	animation-fill-mode: none;
-	animation-play-state: running;
-}
-
-// Блок для запуска анимации движения окружности (лево-право)
-.circle-left-right {
-	animation: left-right 5s linear 3s 5 normal none running;
-}
-
-// Блок для запуска анимации движения окружности по диагонали (верх право-низ лево)
-.circle-topright-botleft {
-	animation: topright-botleft 5s linear 3s 5 normal none running;
-}
-
-// Блок для запуска анимации движения окружности по диагонали (верх лево-низ право)
-.circle-topleft-botright {
-	animation: topleft-botright 5s linear 3s 5 normal none running;
-}
-
-// Блок для запуска анимации движения окружности по квадрату (по часовой стрелке)
-.circle-square-clockwise {
-	animation: square-clockwise 10s linear 3s 5 normal none running;
-}
-
-// Блок для запуска анимации вращения окружности по кругу (спин)
-.circle-clockwise-spin {
-	animation: clockwise-spin 5s linear 3s 5 normal none running;
-}
