--- a/src/style/partials/_start-animations.scss
+++ b/src/style/partials/_start-animations.scss
@@ -50,3 +50,12 @@
 .circle-orbit-counterclock-wise {
 	animation: clockwise-orbit 5s linear 5s 2 reverse none running;
 }
+
+// Блок для запуска анимации движения окружности змейкой (лево - право)
+.circle-snake-right-left {
+	animation: snake-help-center 3s linear 1s 1 reverse forwards running,
+						 snake-right-left 10s linear 5s 1 reverse forwards running,
+						 snake-right-left 10s linear 16s 1 normal forwards running,
+						 snake-help-center 3s linear 27s 1 normal forwards running;
+}
+.div {}
