--- a/src/index.pug
+++ b/src/index.pug
@@ -12,7 +12,7 @@ html(lang="en")
 		.container-fluid
 			.row
 				.col-sm-12.main-cont
-					#anim-main.linear-cont.circle-snake-right-left 
+					#anim-main.linear-cont.circle-square-clockwise
 						#anim-circle.main-circle
 		script(src="js/main.js")
 
