--- a/src/style/partials/_containers.scss
+++ b/src/style/partials/_containers.scss
@@ -29,12 +29,13 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	transition: 3s;
 }
 
 // Окружность; выравнивается по верхнему краю вьюпорта
 .orbit-circle {
 	@extend .main-circle;
 	// Анимация для перемещения окружности вверх перед началом круговой анимации и вниз - после завершения
-	animation: clockwise-orbit-help 3s linear 1s normal forwards running,
-						 clockwise-orbit-help 3s linear 16s reverse forwards running;
+	animation: clockwise-orbit-help 2s linear 1s normal forwards running,
+						 clockwise-orbit-help 2s linear 15s reverse forwards running;
 	}
