Add animation count

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,6 +12,6 @@ html(lang="en")
 		.container-fluid
 			.row
 				.col-sm-12.main-cont
-					#anim-main.linear-cont.circle-orbit-counterclock-wise
-						#anim-circle.orbit-circle
+					#anim-main.linear-cont.circle-snake-right-left
+						#anim-circle.main-circle
 		script(src="js/main.js")
