--- a/src/index.pug
+++ b/src/index.pug
@@ -12,6 +12,8 @@ html(lang="en")
 		.container-fluid
 			.row
 				.col-sm-12.main-cont
-					#anim-main.linear-cont.circle-snake-right-left
+					.timer-main
+						span#timer
+					#anim-main.linear-cont
 						#anim-circle.main-circle
 		script(src="js/main.js")
