Add button to start animation, js blink

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,8 +12,10 @@ html(lang="en")
 		.container-fluid
 			.row
 				.col-sm-12.main-cont
-					.timer-main
+					#timer-cont.main-timer
+						button#startanim Start
+						br
 						span#timer
-					#anim-main.linear-cont
-						#anim-circle.main-circle
+					#anim-main
+						#anim-circle
 		script(src="js/main.js")
