--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,4 +13,5 @@
 @import "partials/_topleft-botright.scss";
 @import "partials/_square-clockwise.scss";
 @import "partials/_orbit-clockwise.scss";
-@import "partials/_snake-right-left.scss"
+@import "partials/_snake-right-left.scss";
+@import "partials/_elements-styling.scss"
