--- a/src/style/partials/_containers.scss
+++ b/src/style/partials/_containers.scss
@@ -20,13 +20,25 @@
 	left: 0%;
 }
 
-.timer-main {
+// Контейнер для таймера с кнопкой
+.main-timer {
 	background-color: #50AA53;
 	width: 200px;
-	height: 100px;
+	height: 70px;
 	position: absolute;
 	top: 10%;
 	left: calc(50% - 200px / 2);
+	text-align: center;
+	font-size: 20px;
+	transition: all 1s linear;
+	opacity: 1;
+	visibility: visible;
+}
+
+// Скрытие контейнера таймера с кнопкой
+.main-timer-hide {
+	visibility: hidden;
+	opacity: 0;
 }
 
 // Окружность; выровнена по центру вьюпорта
@@ -39,7 +51,6 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	transition: 2s;
 }
 
 // Окружность; выравнивается по верхнему краю вьюпорта
