Add and fix square animation 1083px

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,6 +12,7 @@
 @import "partials/_topright-botleft.scss";
 @import "partials/_topleft-botright.scss";
 @import "partials/_square-clockwise.scss";
+@import "partials/_square-counterclock-wise.scss";
 @import "partials/_orbit-clockwise.scss";
 @import "partials/_snake-right-left.scss";
 @import "partials/_elements-styling.scss"
