Change start animation

--- a/src/style/partials/_start-animations.scss
+++ b/src/style/partials/_start-animations.scss
@@ -42,7 +42,7 @@
 	animation: clockwise-orbit 5s linear 4s 3 normal none running;
 }
 
-// Блок для запуска анимации вращения окружности по кругу (против часовой стрелки)
+// Блок для запуска анимации вращения окружности по кругу (1083против часовой стрелки)
 .circle-orbit-counterclock-wise {
 	animation: clockwise-orbit 5s linear 4s 3 reverse none running;
 }
