Add first cycle

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,5 +14,6 @@
 @import "partials/_square-clockwise.scss";
 @import "partials/_square-counterclock-wise.scss";
 @import "partials/_orbit-clockwise.scss";
+@import "partials/_orbit-counterclock.scss";
 @import "partials/_snake-right-left.scss";
 @import "partials/_elements-styling.scss"
