--- a/src/style/partials/_examples.scss
+++ b/src/style/partials/_examples.scss
@@ -26,6 +26,6 @@
 // circle-topleft-botright					16s, 19s, 22s, 31s
 // circle-square-clockwise					39s, 45s, 51s, 57s
 // circle-square-counterclock-wise	39s, 45s, 51s, 57s
-// circle-orbit-clockwise						19s
-// circle-orbit-counterclock-wise		19s
+// circle-orbit-clockwise						19s |
+// circle-orbit-counterclock-wise		19s |39s
 // circle-snake-right-left					30s
