Add new snakes help animatoin time

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,9 +13,10 @@ html(lang="en")
 			.row
 				.col-sm-12.main-cont
 					#timer-cont.main-timer
-						button#startanim Start
+						button.button#startanim Start
 						br
 						span#timer
+					.matanimation
 					#anim-main
 						#anim-circle
 		script(src="js/main.js")
