--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,4 +16,5 @@
 @import "partials/_orbit-clockwise.scss";
 @import "partials/_orbit-counterclock.scss";
 @import "partials/_snake-right-left.scss";
-@import "partials/_elements-styling.scss"
+@import "partials/_elements-styling.scss";
+@import "partials/_matanimation.scss"
