--- a/src/style/partials/_containers.scss
+++ b/src/style/partials/_containers.scss
@@ -51,7 +51,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	transition: border-radius 1.5s;
+	// transition: border-radius 1.5s;
 }
 
 // Окружность; выравнивается по верхнему краю вьюпорта
