--- a/src/style/partials/_orbit-clockwise.scss
+++ b/src/style/partials/_orbit-clockwise.scss
@@ -17,7 +17,9 @@
 	}
 	100% {
 		left: 50%;
-		top: calc(0% + #{$diameter / 2});
+		// Для вьюпорта 4x3
+		// top: calc(0% + 100vh / 2 - 100vw / 2 + #{$diameter / 2});
+		top: calc(0% + #{$diameter / 2};
 		transition: translate3d(left, top, 0);
 	}
 }
