+1 step to fix orbit animation

--- a/src/index.pug
+++ b/src/index.pug
@@ -17,6 +17,6 @@ html(lang="en")
 						br
 						span#timer
 					.matanimation
-					#anim-main.linear-cont.circle-orbit-clockwise
-						#anim-circle.orbit-circle
+					#anim-main
+						#anim-circle
 		script(src="js/main.js")
