--- a/src/style/partials/_orbit-clockwise.scss
+++ b/src/style/partials/_orbit-clockwise.scss
@@ -8,7 +8,7 @@
 	}
 }
 
-// Вспомогательная анимация (выход вверх)
+// Вспомогательная анимация (выход вверх) (ширина вьюпорта больше его высоты)
 @keyframes orbit-clockwise-help {
 	0% {
 		left: 50%;
@@ -17,9 +17,21 @@
 	}
 	100% {
 		left: 50%;
-		// Для вьюпорта 4x3
-		// top: calc(0% + 100vh / 2 - 100vw / 2 + #{$diameter / 2});
 		top: calc(0% + #{$diameter / 2};
+		transition: translate3d(left, top, 0);
+	}
+}
+
+// Вспомогательная анимация (выход вверх) (высота вьюпорта больше его ширины)
+@keyframes orbit-clockwise-help-4x3 {
+	0% {
+		left: 50%;
+		top: 50%;
+		transition: translate3d(left, top, 0);
+	}
+	100% {
+		left: 50%;
+		top: calc(0% + 100vh / 2 - 100vw / 2 + #{$diameter / 2});
 		transition: translate3d(left, top, 0);
 	}
 }
