Some code cleaning

--- a/src/style/partials/_containers.scss
+++ b/src/style/partials/_containers.scss
@@ -62,6 +62,7 @@
 						 orbit-counterclock-wise-help 2s linear 36s reverse forwards running;
 	}
 
+// Окружность; выравнивается по верхнему краю вьюпорта, если высота вьюпорта больше его ширины
 .orbit-circle-4x3 {
 	@extend .main-circle;
 	// Анимация для перемещения окружности вверх перед началом круговой анимации и вниз - после завершения
