Add reloading page on orientation change

--- a/src/index.pug
+++ b/src/index.pug
@@ -5,13 +5,14 @@ html(lang="en")
 		title Blink
 		meta(name="description" content="Blink - exercises to relieve eye fatigue")
 		meta(name="keywords" content="Eye, exercise, fatigue, health")
-		meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0")
+		meta(name="viewport" content="height=device-height,width=device-width, initial-scale=1.0, maximum-scale=1.0")
 		link(rel="icon" type="imge/png" href="")
 		link(rel="stylesheet" type="text/css" href="css/main.css")
 	body
 		.container-fluid
 			.row
 				.col-sm-12.main-cont
+					#scroll-top
 					#timer-cont.main-timer
 						button.button#startanim Start
 						br
