--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,6 +3,7 @@
 @import "../../bower_components/bootstrap/scss/_normalize.scss";
 @import "../../bower_components/bootstrap/scss/_reboot.scss";
 @import "../../bower_components/bootstrap/scss/_grid.scss";
+@import "partials/_main-menu.scss";
 @import "partials/_my-variables.scss";
 @import "partials/_containers.scss";
 @import "partials/_start-animations.scss";
