--- a/src/style/partials/_main-menu.scss
+++ b/src/style/partials/_main-menu.scss
@@ -149,7 +149,7 @@ Main components
 #cd-intro {
 	position: relative;
 	height: 100%;
-	background: url("../img/bg-img.jpg") no-repeat center center;
+	background: url("../img/eye.svg") no-repeat center center;
 	background-size: cover;
 	h1 {
 		position: absolute;
@@ -208,7 +208,7 @@ Main components
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: url("../img/bg-img.jpg") no-repeat center center;
+	background: url("../img/eye.svg") no-repeat center center;
 	background-size: cover;
 	-webkit-filter: blur(4px);
 	filter: blur(4px);
