Add background gradient genetator

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,4 +18,4 @@
 @import "partials/_orbit-counterclock.scss";
 @import "partials/_snake-right-left.scss";
 @import "partials/_elements-styling.scss";
-@import "partials/_matanimation.scss"
+@import "partials/_choose-color.scss"
