--- a/src/template/blink.pug
+++ b/src/template/blink.pug
@@ -11,13 +11,11 @@ html(lang="en")
 	body
 		.container-fluid
 			.row
-				.col-sm-12.main-cont
-					#scroll-top
+				.col-sm-12.main-cont#gradient
 					#timer-cont.main-timer
 						button.button#startanim Start
 						br
 						span#timer
-					.matanimation
 					#anim-main
 						#anim-circle
 		script(src="../js/jquery.js")
